--- a/src/assets/scss/layout/_lab.scss
+++ b/src/assets/scss/layout/_lab.scss
@@ -31,7 +31,7 @@
   }
 
   .book-text {
-    left: 8%;
+    left: 40px;
   }
 
   .book-text,
@@ -49,7 +49,7 @@
   }
 
   .scope-text {
-    right: 12%;
+    right: 100px;
     top: 45%;
   }
 
