--- a/src/assets/scss/layout/_feature.scss
+++ b/src/assets/scss/layout/_feature.scss
@@ -207,8 +207,76 @@
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
+  .feature-section-class {
+    padding: 50px 40px;
+  }
+
   .feature-section-class .cardOptions {
+    padding: 80px 40px;
+  }
+
+  .feature-section-class .card-icon {
+    left: -25px;
+    top: -25px;
+
+    img {
+      max-width: 40px;
+    }
+  }
+
+  .feature-section-class .cardOptions .cardOptionOne,
+  .feature-section-class .cardOptions .cardOptionTwo {
+    gap: 50px;
+    padding: 0;
+  }
+
+  header .explore-tray.navbar-active {
+    padding: 15px;
+  }
+}
+
+@media (max-width: 991px) {
+  .feature-section-class .card-icon {
     padding: 10px;
+
+    // img {
+    //   max-width: 25px;
+    // }
+  }
+
+  .feature-section-class .card-item {
+    padding: 40px 20px;
+  }
+
+  .feature-section-class .card-item h3 {
+    margin-bottom: 10px;
+    font-size: 20px;
+  }
+
+  .feature-section-class .cardOptions {
+    gap: 50px;
+  }
+
+  .footer.footer_new .footer-top-new {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media (max-width: 767px) {
+  .feature-section-class {
+    padding-inline: 20px;
+  }
+
+  .feature-section-class .cardOptions {
+    // grid-template-columns: 1fr;
+    gap: 40px;
+
+  }
+
+  .feature-section-class .cardOptions .cardOptionOne,
+  .feature-section-class .cardOptions .cardOptionTwo {
+    flex-direction: column;
+    gap: 40px;
   }
 }
