--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -162,34 +162,35 @@
       gap: 0;
     }
 
-    &::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
+    // &::before {
+    //   content: "";
+    //   position: absolute;
+    //   inset: 0;
+    //   width: 100%;
+    //   height: 100%;
+    //   z-index: -1;
+    // }
 
-    &.product-bio-verse::before {
-      background: url("/img/product/item-bg/bio-verse-bg-m.webp") center/cover;
-    }
+    // &.product-bio-verse::before {
+    //   background: url("/img/product/item-bg/bio-verse-bg-m.webp") center/cover;
+    //   background: radial-gradient(circle, rgba(137,210,78,0.5) 0%, rgba(255,255,255,1) 100%);
+    // }
 
-    &.product-chem-verse::before {
-      background: url("/img/product/item-bg/chem-verse-bg-m.webp") center/cover;
-    }
+    // &.product-chem-verse::before {
+    //   background: url("/img/product/item-bg/chem-verse-bg-m.webp") center/cover;
+    // }
 
-    &.product-atom-verse::before {
-      background: url("/img/product/item-bg/atom-verse-bg-m.webp") center/cover;
-    }
+    // &.product-atom-verse::before {
+    //   background: url("/img/product/item-bg/atom-verse-bg-m.webp") center/cover;
+    // }
 
-    &.product-space-verse::before {
-      background: url("/img/product/item-bg/space-verse-bg-m.webp") center/cover;
-    }
+    // &.product-space-verse::before {
+    //   background: url("/img/product/item-bg/space-verse-bg-m.webp") center/cover;
+    // }
 
-    &.product-geo-verse::before {
-      background: url("/img/product/item-bg/geo-verse-bg-m.webp") center/cover;
-    }
+    // &.product-geo-verse::before {
+    //   background: url("/img/product/item-bg/geo-verse-bg-m.webp") center/cover;
+    // }
 
     a {
       display: flex;
@@ -247,7 +248,7 @@
 
 @include mq(lg) {
   .product-section {
-    min-height: 70rem;
+    // min-height: 70rem;
 
     .product-item {
       margin-inline: auto;
@@ -349,4 +350,36 @@
       height: 4rem;
     }
   }
+
+  .product-section .section-sub-title {
+    width: 100%;
+  }
+
+  .swiper-slide:last-child .video::after {
+    font-size: 24px;
+  }
+
+  .product-section .product-content {
+    gap: 10px;
+  }
+
+  .product-section .section-title {
+    font-size: 24px;
+    line-height: 24px;
+    margin: 0;
+  }
+
+  .product-section .swiper-slide {
+    min-height: unset;
+    height: 80vh;
+  }
+
+  .h-section .hero-image .bag {
+    max-width: 120px;
+  }
+
+  .h-section .hero-image picture img  {
+    margin-top: 30px;
+  }
+
 }
