--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -60,6 +60,10 @@
       li {
         margin-bottom: 2rem;
         font-size: 1.6rem;
+
+        :first-child {
+          text-transform: lowercase;
+        }
       }
     }
   }
@@ -160,7 +164,7 @@
     grid-template-columns: repeat(2, auto);
   }
 
-  
+
 }
 
 @media (max-width: 767px) {
