--- a/src/assets/scss/layout/_feature.scss
+++ b/src/assets/scss/layout/_feature.scss
@@ -142,7 +142,7 @@
 
 
 .feature-section-class {
-  padding: 50px 88px;
+  padding: 0 88px 50px;
 
   .cardOptions {
     box-shadow: 0px 0px 40px 0px #C1D0DC40;
