--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -50,7 +50,7 @@
 
   &.btn-secondary {
     background-color: var(--secondary);
-    color: #9ea0a8;
+    color: #fff;
     transition: all linear 0.5s;
 
     &:hover,
