--- a/src/assets/scss/layout/_faq.scss
+++ b/src/assets/scss/layout/_faq.scss
@@ -55,17 +55,17 @@
     padding: 4rem 100px 8rem;
     .faq {
       &-logo {
-        width: 45%;
+        width: 30%;
         flex-shrink: 0;
-        display: flex;
-        align-items: center;
+        // display: flex;
+        // align-items: start;
         .fill-logo {
           margin-inline: auto;
-          max-width: 25rem;
+          max-width: 18rem;
         }
       }
       &-list {
-        width: 55%;
+        width: 70%;
       }
       &-wrapper {
         display: flex;
