--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -6,8 +6,11 @@
   padding-inline: 2rem;
 
   .footer-text {
-    font-size: 1.3rem;
-    font-weight: 500;
+    font-family: Gilroy-Bold;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14.86px;
+    color: #fff;
   }
 
   &::before {
@@ -24,11 +27,13 @@
 
   &-link-title {
     text-transform: uppercase;
-    letter-spacing: 0.5rem;
-    font-size: 1.4rem;
-    display: block;
     margin-bottom: 1.5rem;
-    font-weight: 500;
+    font-family: Gilroy-Bold;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.81px;
+    letter-spacing: 0.3em;
+    display: inline-block;
   }
 
   &-link-list {
@@ -58,21 +63,29 @@
       }
 
       li {
-        margin-bottom: 2rem;
-        font-size: 1.6rem;
+        a {
 
-        :first-child {
-          text-transform: lowercase;
+          margin-bottom: 2rem;
+          // font-size: 1.6rem;
+          font-family: Gilroy-Medium;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 32px;
+          align-items: center;
+          text-transform: unset;
         }
       }
     }
   }
 
   li {
-    font-size: 1.4rem;
-    margin-bottom: 0.5rem;
-    text-transform: capitalize;
-    font-weight: 300;
+    a {
+      font-family: Gilroy-Medium;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 32px;
+      text-transform: capitalize;
+    }
   }
 
   &-top {
